# risex-indexer

./: Cargo.toml  README.md  TASK.md  notification.json  test.http
docs/superpowers/specs/: 2026-04-17-risex-indexer-design.md  2026-04-17-risex-indexer-plan.md  2026-04-21-concurrent-backfill-design.md
examples/: README.md  backfill.rs  shred.rs
src/: backfill.rs  cache.rs  config.rs  db.rs  lib.rs  main.rs  rpc.rs  server.rs  shred.rs  writer.rs
