[package]
name = "risex-indexer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3"

[dependencies]
alloy = { version = "2.0.0", features = ["rpc-types-eth", "rpc-types-trace", "serde", "std", "providers", "reqwest-default-tls"] }
axum = { version = "0.8.9", features = ["ws"] }
moka = { version = "0.12.15", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tokio-util = "0.7"
futures-util = "0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rocksdb = { version = "0.24", default-features = false, features = ["lz4"] }
reqwest = "0.12"
thiserror = "2"
alloy-provider = { version = "2.0.0", features = ["ws"] }
alloy-network = "2.0.0"
rand = "0.10.1"
